float_eq/tests/derive_tests/debug_ulps_diff/debug_ulps_diff_duplicate_type_name.stderr
error: Duplicate `debug_ulps_diff` argument
 --> $DIR/debug_ulps_diff_duplicate_type_name.rs:4:39
  |
4 | #[float_eq(debug_ulps_diff = "Name1", debug_ulps_diff = "Name2")]
  |                                       ^^^^^^^^^^^^^^^
